# Nucleus

./: .gitignore  AllocationObserver.cpp  AllocationObserver.h  Allocator.h  CMakeLists.txt  CoreMacros.h  Generate.ps1  ImmutableArray.h  Nucleus.xcodeproj  StaticArray.h  TinyCore.sln  generate-Linux.sh  generate-macOS.sh  main.cpp
Include/Nucleus/: AllocationObserver.h  Allocator.h  Any.h  Archive.h  Bench.h  Collection.h  Console.h  CoreMacros.h  ExceptionHandler.h  Exceptions.h  File.h  Fmt.h  Function.h  ImmutableArray.h  Json.h  List.h  ManagedArray.h  Map.h  Math.h  MutableArray.h  Nucleus.h  Optional.h  Random.h  Reflectable.h  Shared.h  Singleton.h  SmartArray.h  StackTrace.h  StaticArray.h  String.h  Test.h  Type.h  Unique.h
Include/Nucleus/Inline/: AllocationObserver.inl  Allocator.inl  Array.inl  Collection.inl  Container.inl  FmtImpl.inl  ImmutableArray.inl  MutableArray.inl  Random.inl  Serialization.inl  Shared.inl  SmartArray.inl  Storage.inl  String.inl  StringFormat.inl  Type.inl  Unique.inl
Include/Nucleus/Serialization/: Archive.h  Container.h  Json.h  Storage.h
Source/: Archive.cpp  Console.cpp  Exceptions.cpp  File.cpp  Json.cpp  Random.cpp  StackTrace.cpp  String.cpp  Test.cpp  Type.cpp
Source/Serialization/: Archive.cpp  Container.cpp  Json.cpp  Storage.cpp
Tests/: CMakeLists.txt  main.cpp
TinyCore/: AllocationObserver.h  Allocator.h  Exceptions.h  ImmutableArray.h  ManagedArray.h  Map.h  MutableArray.h  Shared.h  StaticArray.h  String.h  TinyCore.vcxproj  TinyCore.vcxproj.filters  Type.h  Unique.h  main.cpp
TinyCore.xcodeproj/: project.pbxproj
TinyCore.xcodeproj/project.xcworkspace/xcuserdata/sl4sh.xcuserdatad/: UserInterfaceState.xcuserstate
TinyCore.xcodeproj/xcuserdata/sl4sh.xcuserdatad/xcschemes/: TinyCore.xcscheme  xcschememanagement.plist
TinyCore/Inline/: AllocationObserver.inl  Allocator.inl  ImmutableArray.inl  MutableArray.inl  Shared.inl  String.inl  Type.inl  Unique.inl
